--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <title>Mercado Libre Argentina</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color: #eeeeee"></div>
   </body>
 </html>
