comercio libre title

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Mercado Libre Argentina</title>
+    <title>Comercio Libre Argentina</title>
   </head>
   <body>
     <div id="root" style="background-color: #eeeeee"></div>
